# GreenLight-Gym2-Hydroponics

./: CITATION.cff  HYDROPONIC_README.md  pyproject.toml  requirements_hydroponic.txt  test_hydroponic.py
gl_gym/RL/: experiment_manager.py  utils.py
gl_gym/clean_data/: check.py  check_columns_name.py  clean.py  convert.py  just_300.py
gl_gym/common/: callbacks.py  evaluation.py  utils.py
gl_gym/configs/: README.md
gl_gym/configs/agents/: ppo.yml  recurrentppo.yml  rule_based.yml  sac.yml
gl_gym/configs/envs/: HydroponicLettuceEnv.yml  LettuceEnv.yml  TomatoEnv.yml
gl_gym/configs/sweeps/: ppo.yml  recurrentppo.yml  sac.yml
gl_gym/environments/: Hydroponic_Lettuce_Env.py  __init__.py  base_env.py  baseline.py  lettuce_env.py  noise.py  observations.py  parameters.py  rewards.py  tomato_env.py  utils.py
gl_gym/environments/models/: ode.py  parameters.py  utils.py
gl_gym/experiments/: evaluate_baseline.py  evaluate_rl.py  gl_predefined_controls.py  run_time.py  stochastic_rl.py
tests/: env_test.py
